added restriction checks and api upd
